--- a/radio/src/CMakeLists.txt
+++ b/radio/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(CMakeForceCompiler)
 include(Bitmaps)
 
-set(PCB_TYPES X7 XLITE X9D X9D+ X9E X10 X12S 9X 9XR 9X128 9XR128 9X2561 GRUVIN9X MEGA2560 SKY9X 9XRPRO AR9X)
+set(PCB_TYPES X7 XLITE X9D X9D+ X9E X10 X12S 9X 9XR 9X128 9XR128 9X2561 GRUVIN9X MEGA2560 SKY9X 9XRPRO AR9X ESP-WROOM-32)
 set(GUI_LANGUAGES CZ DE EN ES FR IT PT SK SE PL HU NL)
 set(TTS_LANGUAGES CZ DE EN ES FR IT PT SK SE PL HU NL RU)
 
@@ -118,6 +118,9 @@ elseif(PCB STREQUAL GRUVIN9X)
   include(targets/gruvin9x/CMakeLists.txt)
 elseif(PCB STREQUAL MEGA2560)
   include(targets/mega2560/CMakeLists.txt)
+elseif(PCB STREQUAL ESP-WROOM-32)
+  include(targets/esp-wroom-32/CMakeLists.txt)
+  set(ARCH ESP32)
 else()
   message(FATAL_ERROR "Unknown PCB '${PCB}'")
 endif()
@@ -536,7 +539,81 @@ if(NOT MSVC)
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
         )
     endif()
+  if(ARCH STREQUAL ESP32)
 
+    enable_language(ASM)
+    set(CMAKE_C_COMPILER arm-none-eabi-gcc)
+    set(CMAKE_CXX_COMPILER arm-none-eabi-g++)
+    set(CMAKE_ASM_COMPILER arm-none-eabi-as)
+
+    set(CMAKE_SYSTEM_NAME Generic)
+    set(CMAKE_SYSTEM_VERSION 1)
+    set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -o <OBJECT> <SOURCE>")
+
+    set(COMMON_FLAGS "-mcpu=${MCU} -mthumb -fomit-frame-pointer -fverbose-asm -Wa,-ahlms=firmware.lst -O${OPT} -gdwarf-2 -DHSE_VALUE=${HSE_VALUE} -fno-exceptions -fdata-sections -ffunction-sections ${WARNING_FLAGS}")
+    set(COMMON_FLAGS "${COMMON_FLAGS} ${FPU_FLAGS}")
+
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS} -Wimplicit")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_FLAGS}")
+
+    # these are in addition to CMAKE_CXX_FLAGS
+    set(CMAKE_EXE_LINKER_FLAGS "-lm -T${RADIO_SRC_DIRECTORY}/${LINKER_SCRIPT} -Wl,-Map=firmware.map,--cref,--no-warn-mismatch,--gc-sections")
+    if(SEMIHOSTING)
+      add_definitions(-DSEMIHOSTING)
+      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --specs=rdimon.specs")
+    endif()
+    # Use newlib nano, which saves a few kilobytes.
+    if(NOT NANO STREQUAL NO)
+      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --specs=nano.specs")
+      if(NOT LUA STREQUAL NO)
+        # Lua needs %g and %f
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -u _printf_float -u _scanf_float")
+      endif()
+      # Nano's malloc does work well with lua, use our own
+      add_definitions(-DUSE_BIN_ALLOCATOR)
+      set(SRC ${SRC} bin_allocator.cpp)
+    endif()
+
+
+    if(PCB STREQUAL XLITE OR PCB STREQUAL X9D OR PCB STREQUAL X9D+ OR PCB STREQUAL X9E OR PCB STREQUAL X7 OR PCB STREQUAL X10 OR PCB STREQUAL X12S)
+      add_subdirectory(targets/common/arm/stm32/bootloader)
+      include_directories(${CMAKE_CURRENT_BINARY_DIR}/targets/common/arm/stm32/bootloader)
+      set(FIRMWARE_DEPENDENCIES ${FIRMWARE_DEPENDENCIES} bootloader)
+    elseif(OPENRC_BOOTLOADER)
+      # We fetch Mike's bootloader as it is not included inside OpenTX
+      message(STATUS "Downloading Mike's bootloader: https://github.com/MikeBland/OpenRcBootloader/releases/download/V1.9/${OPENRC_BOOTLOADER}")
+      file(DOWNLOAD https://github.com/MikeBland/OpenRcBootloader/releases/download/V1.9/${OPENRC_BOOTLOADER} ${CMAKE_CURRENT_BINARY_DIR}/bootloader.lbm STATUS status)
+      list(GET status 0 error_code)
+      if(error_code)
+        list(GET status 1 error_message)
+        message(FATAL_ERROR "Download failed: ${error_message}")
+      endif()
+    endif()
+
+    add_executable(firmware ${SRC} ${FIRMWARE_HEADERS})
+    link_libraries(firmware -lstdc++)
+    add_dependencies(firmware ${FIRMWARE_DEPENDENCIES})
+
+    add_custom_command(
+      TARGET firmware POST_BUILD
+      COMMAND arm-none-eabi-objcopy -O binary firmware.elf firmware.bin
+      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    )
+
+    find_program(GAWK gawk HINTS "c:/cygwin/bin/" "c:/msys/bin/" DOC "gawk for firmware size report.")  # OS X might only have "awk"
+    if (BASH AND GAWK)
+      add_custom_target(firmware-size
+        COMMAND ${BASH} -kc '${RADIO_DIRECTORY}/util/elf-size-report.sh --mcu=${CPU_TYPE_FULL} ${SIZE_TARGET_MEM_DEFINE} firmware.elf'
+        DEPENDS firmware
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        )
+    else()
+      add_custom_target(firmware-size
+        COMMAND arm-none-eabi-size -A firmware.elf
+        DEPENDS firmware
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        )
+    endif()
   else()  # AVR
 
     set(CMAKE_C_COMPILER avr-gcc)
