--- a/radio/src/targets/esp-wroom-32/CMakeLists.txt
+++ b/radio/src/targets/esp-wroom-32/CMakeLists.txt
@@ -7,12 +7,12 @@ set(MCU ESP32)
 set(LUA NO)
 set(AUDIO YES)
 string(TOLOWER ${PCB} FLAVOUR)
-set(EEPROM EEPROM_RLC)
-add_definitions(-DEEPROM_VARIANT=0 -DLCD_SPI)
+set(EEPROM SPIFLASH)
+add_definitions(-DEEPROM_VARIANT=0 -DLCD_SPI -DSPIFLASH)
 set(GUI_DIR 128x64)
 set(TARGET_DIR esp-wroom-32)
 set(FIRMWARE_DEPENDENCIES ${FIRMWARE_DEPENDENCIES} 9x_bitmaps)
-add_definitions(-DPCB${PCB} -DCPUESP32 -DROTARY_ENCODERS=1)
+add_definitions(-DPCB${PCB} -DCPUESP32 -DROTARY_ENCODERS=2)
 set(TARGET_SRC ${TARGET_SRC} board.cpp)
 set(GUI_SRC
   ${GUI_SRC}
