--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ sdkconfig
 radio/src/targets/common/esp32/esp-idf/components/startup/defines.mk
 radio/src/targets/common/esp32/esp-idf/components/startup/includes.mk
 radio/src/targets/common/esp32/esp-idf/log.txt
+radio/src/targets/common/esp32/esp-idf/sdkconfig.old
