--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ radio/src/targets/common/esp32/esp-idf/components/startup/defines.mk
 radio/src/targets/common/esp32/esp-idf/components/startup/includes.mk
 radio/src/targets/common/esp32/esp-idf/log.txt
 radio/src/targets/common/esp32/esp-idf/sdkconfig.old
+radio/src/targets/common/esp32/esp-idf/components/firmware/defines.mk
+radio/src/targets/common/esp32/esp-idf/MicroPython_ESP32_psRAM_LoBo-master/
