Alternative eeprom storage.

--- a/radio/src/CMakeLists.txt
+++ b/radio/src/CMakeLists.txt
@@ -164,8 +164,11 @@ set(SRC ${SRC} debug.cpp)
 if(${EEPROM} STREQUAL SDCARD)
   set(SRC ${SRC} storage/storage_common.cpp storage/sdcard_raw.cpp storage/modelslist.cpp)
 elseif(${EEPROM} STREQUAL EEPROM_RLC)
-  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_rlc.cpp)
+  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_rlc.cpp) 
   add_definitions(-DEEPROM -DEEPROM_RLC)
+elseif(${EEPROM} STREQUAL SPIFLASH)
+  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp) 
+  add_definitions(-DEEPROM -DSPIFLASH)
 else()
   set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_raw.cpp)
   add_definitions(-DEEPROM -DEEPROM_RAW)
