--- a/radio/src/targets/esp-wroom-32/CMakeLists.txt
+++ b/radio/src/targets/esp-wroom-32/CMakeLists.txt
@@ -7,7 +7,7 @@ set(MCU ESP32)
 set(LUA NO)
 set(AUDIO YES)
 string(TOLOWER ${PCB} FLAVOUR)
-set(EEPROM EEPROM_RLC)
+set(EEPROM SPIFLASH)
 add_definitions(-DEEPROM_VARIANT=0 -DLCD_SPI)
 set(GUI_DIR 128x64)
 set(TARGET_DIR esp-wroom-32)
