--- a/radio/src/targets/common/esp32/CMakeLists.txt
+++ b/radio/src/targets/common/esp32/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(LCD_TYPES DEFAULT ST7565P ST7565R ERC12864FSF ST7920 KS108)
 set(LCD "DEFAULT" CACHE STRING "LCD type (${LCD_TYPES})")
 set_property(CACHE LCD PROPERTY STRINGS ${LCD_TYPES})
-
+option(GRAPHICS "Additional graphics" ON)
 set(TELEMETRY_TYPES NONE MAVLINK ARDUPILOT FRSKY FRSKY_SPORT TELEMETREZ NMEA)
 set(TELEMETRY "NONE" CACHE STRING "Telemetry Type (${TELEMETRY_TYPES})")
 set_property(CACHE TELEMETRY PROPERTY STRINGS ${TELEMETRY_TYPES})
