CMake.txt cleanup

--- a/radio/src/targets/common/esp32/CMakeLists.txt
+++ b/radio/src/targets/common/esp32/CMakeLists.txt
@@ -1,7 +1,8 @@
-set(LCD_TYPES DEFAULT ST7565P ST7565R ERC12864FSF ST7920 KS108)
+set(LCD_TYPES DEFAULT ST7565P)
 set(LCD "DEFAULT" CACHE STRING "LCD type (${LCD_TYPES})")
 set_property(CACHE LCD PROPERTY STRINGS ${LCD_TYPES})
 option(GRAPHICS "Additional graphics" ON)
+option(BOLD "Bold font" ON)
 set(TELEMETRY_TYPES NONE MAVLINK ARDUPILOT FRSKY FRSKY_SPORT TELEMETREZ NMEA)
 set(TELEMETRY "NONE" CACHE STRING "Telemetry Type (${TELEMETRY_TYPES})")
 set_property(CACHE TELEMETRY PROPERTY STRINGS ${TELEMETRY_TYPES})
@@ -44,7 +45,7 @@ elseif(TELEMETRY STREQUAL JETI)
   set(SRC ${SRC} telemetry/jeti.cpp)
 elseif(TELEMETRY STREQUAL MAVLINK)
   add_definitions(-DTELEMETRY_MAVLINK)
-  include_directories(${THIRDPARTY_DIR} gui/${GUI_DIR} targets/common/avr)
+  include_directories(${THIRDPARTY_DIR} gui/${GUI_DIR})
   if(NOT EXISTS ${THIRDPARTY_DIR}/GCS_MAVLink/include_v1.0/mavlink_types.h)
       message(WARNING "Warning: ${THIRDPARTY_DIR}/GCS_MAVLink/include_v1.0 is empty, trying to clone submodules")
       execute_process(COMMAND git submodule update --init
