Audio first working version.

--- a/radio/src/targets/esp-wroom-32/CMakeLists.txt
+++ b/radio/src/targets/esp-wroom-32/CMakeLists.txt
@@ -9,7 +9,7 @@ set(AUDIO YES)
 string(TOLOWER ${PCB} FLAVOUR)
 set(EEPROM SPIFLASH)
 add_definitions(-DEEPROM_VARIANT=0 -DLCD_SPI)
-add_definitions(-DSOFTWARE_VOLUME)
+#add_definitions(-DSOFTWARE_VOLUME)
 set(GUI_DIR 128x64)
 set(TARGET_DIR esp-wroom-32)
 set(FIRMWARE_DEPENDENCIES ${FIRMWARE_DEPENDENCIES} 9x_bitmaps)
