sdcard mostly working

--- a/radio/src/targets/common/esp32/CMakeLists.txt
+++ b/radio/src/targets/common/esp32/CMakeLists.txt
@@ -34,6 +34,12 @@ if(SDCARD)
 #  set(SRC ${SRC} sdcard.cpp rtc.cpp logs.cpp)
 endif()
 
+if(GVARS)
+  set(GUI_SRC
+    ${GUI_SRC}
+    ${GVAR_SCREEN}
+    )
+endif()
 
 if(GRAPHICS)
   add_definitions(-DGRAPHICS)
