Logs implemented & cleanup

--- a/radio/src/targets/common/esp32/CMakeLists.txt
+++ b/radio/src/targets/common/esp32/CMakeLists.txt
@@ -32,8 +32,7 @@ else()
 endif()
 if(SDCARD)
   add_definitions(-DSDCARD -DVOICE)
-  set(SRC ${SRC} rtc.cpp )
-#  set(SRC ${SRC} sdcard.cpp rtc.cpp logs.cpp)
+  set(SRC ${SRC} rtc.cpp logs.cpp)
 endif()
 
 if(GVARS)
