--- a/radio/src/targets/common/esp32/esp-idf/Makefile
+++ b/radio/src/targets/common/esp32/esp-idf/Makefile
@@ -2,3 +2,5 @@ PROJECT_NAME := OpenTx
 
 include $(IDF_PATH)/make/project.mk
 
+ota: app
+	curl ${ESP32_IP}:8032 --data-binary @- < build/$(PROJECT_NAME).bin
