--- a/radio/src/CMakeLists.txt
+++ b/radio/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(CMakeForceCompiler)
 include(Bitmaps)
 
-set(PCB_TYPES X3 X7 XLITE XLITES X9D X9D+ X9E X10 X12S SKY9X 9XRPRO AR9X)
+set(PCB_TYPES X3 X7 XLITE XLITES X9D X9D+ X9E X10 X12S SKY9X 9XRPRO AR9X ESP_WROOM_32)
 set(GUI_LANGUAGES CZ DE EN ES FR IT PT SK SE PL HU NL)
 set(TTS_LANGUAGES CZ DE EN ES FR IT PT SK SE PL HU NL RU)
 
@@ -86,6 +86,8 @@ elseif(PCB STREQUAL X9E OR PCB STREQUAL X9D+ OR PCB STREQUAL X9D OR PCB STREQUAL
   include(targets/taranis/CMakeLists.txt)
 elseif(PCB STREQUAL SKY9X OR PCB STREQUAL 9XRPRO OR PCB STREQUAL AR9X)
   include(targets/sky9x/CMakeLists.txt)
+elseif(PCB STREQUAL ESP_WROOM_32)
+  include(targets/esp-wroom-32/CMakeLists.txt)
 else()
   message(FATAL_ERROR "Unknown PCB '${PCB}'")
 endif()
@@ -111,6 +113,8 @@ endif()
 
 if(ARCH STREQUAL ARM)
   include(targets/common/arm/CMakeLists.txt)
+elseif(ARCH STREQUAL ESP32)
+  include(targets/common/esp32/CMakeLists.txt)
 endif()
 
 include_directories(targets/${TARGET_DIR} ${THIRDPARTY_DIR})
@@ -126,8 +130,11 @@ set(SRC ${SRC} debug.cpp)
 if(${EEPROM} STREQUAL SDCARD)
   set(SRC ${SRC} storage/storage_common.cpp storage/sdcard_raw.cpp storage/modelslist.cpp)
 elseif(${EEPROM} STREQUAL EEPROM_RLC)
-  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_rlc.cpp)
+  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_rlc.cpp) 
   add_definitions(-DEEPROM -DEEPROM_RLC)
+elseif(${EEPROM} STREQUAL SPIFLASH)
+  set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp ) 
+  add_definitions(-DEEPROM -DSPIFLASH )
 else()
   set(SRC ${SRC} storage/storage_common.cpp storage/eeprom_common.cpp storage/eeprom_raw.cpp)
   add_definitions(-DEEPROM -DEEPROM_RAW)
@@ -241,7 +248,7 @@ if(SIMU_DISKIO)
   add_definitions(-DSIMU_DISKIO)
 endif()
 
-if(SDCARD)
+if(SDCARD AND NOT CPU_FAMILY STREQUAL ESP32)
   add_definitions(-DSDCARD)
   include_directories(${FATFS_DIR} ${FATFS_DIR}/option)
   set(SRC ${SRC} sdcard.cpp rtc.cpp logs.cpp)
@@ -340,6 +347,12 @@ if(GUI)
   foreach(FILE ${GUI_SRC})
     set(SRC ${SRC} gui/${GUI_DIR}/${FILE})
   endforeach()
+  if(ARCH STREQUAL ESP32)
+    set(SRC
+      ${SRC}
+      gui/gui_common_esp32.cpp
+      )
+  endif()
 endif()
 
 foreach(FILE ${TARGET_SRC})
@@ -492,7 +505,31 @@ if(NOT MSVC)
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
         )
     endif()
-  endif()  # ARM
+
+  elseif(ARCH STREQUAL ESP32)
+
+    enable_language(ASM)
+    set(CMAKE_C_COMPILER xtensa-esp32-elf-gcc)
+    set(CMAKE_CXX_COMPILER xtensa-esp32-elf-g++)
+    set(CMAKE_ASM_COMPILER xtensa-esp32-elf-as)
+
+    set(CMAKE_SYSTEM_NAME Generic)
+    set(CMAKE_SYSTEM_VERSION 1)
+    set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -o <OBJECT> <SOURCE>")
+
+    set(COMMON_FLAGS "-mlongcalls -fomit-frame-pointer -fverbose-asm -Wa,-ahlms=firmware.lst -O${OPT} -gdwarf-2 -DHSE_VALUE=${HSE_VALUE} -fno-exceptions -fdata-sections -ffunction-sections ${WARNING_FLAGS}")
+    set(COMMON_FLAGS "${COMMON_FLAGS} ${FPU_FLAGS}")
+
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS} -Wimplicit")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_FLAGS}")
+
+    # these are in addition to CMAKE_CXX_FLAGS
+    set(CMAKE_EXE_LINKER_FLAGS "-lm -T${RADIO_SRC_DIRECTORY}/${LINKER_SCRIPT} -Wl,-Map=firmware.map,--cref,--no-warn-mismatch,--gc-sections")
+    add_library(otxcore ${SRC} ${FIRMWARE_HEADERS})
+    link_libraries(otxcore -lstdc++)
+    add_dependencies(otxcore ${FIRMWARE_DEPENDENCIES})
+
+  endif()  # ARM or ESP32
 
   if(CPU_FAMILY STREQUAL STM32)
     add_custom_target(flash
