--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -234,6 +234,7 @@ set(companion_SRCS
   progressdialog.cpp
   process_copy.cpp
   process_flash.cpp
+  process_dnld.cpp
   process_sync.cpp
   flashfirmwaredialog.cpp
   flasheepromdialog.cpp
@@ -270,6 +271,7 @@ set(companion_MOC_HDRS
   progressdialog.h
   process_copy.h
   process_flash.h
+  process_dnld.h
   process_sync.h
   flashfirmwaredialog.h
   flasheepromdialog.h
