Undo GPS disable

--- a/radio/src/targets/common/esp32/CMakeLists.txt
+++ b/radio/src/targets/common/esp32/CMakeLists.txt
@@ -133,7 +133,7 @@ if(CROSSFIRE)
     )
 endif()
 
-add_definitions(-DTELEMETRY_FRSKY -DTELEMETRY_FRSKY_SPORT)
+add_definitions(-DTELEMETRY_FRSKY -DTELEMETRY_FRSKY_SPORT -DGPS)
 
 add_definitions(-DBOLD_FONT -DBATTGRAPH -DTHRTRACE)
 add_definitions(-DREQUIRED_SDCARD_VERSION="${SDCARD_VERSION}")
